fixed panel left right spacing

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -42,7 +42,7 @@ strong {
 	background-image: url('../img/form-panel-bg.png');
 	background-repeat: repeat-x;
 	border-bottom: solid 1px #eee;
-	padding: 42px 0;
+	padding: 42px 22px;
 	margin: 80px 0 132px 0;
 }
 .callout {
